# graphql_api

./: .releaserc.js  .releaserc.json  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  python-app.yml  release.yml  semantic_release.yml  test.yml
methods/: api_request.py  common_actions.py
methods/queries/: countries.py  country.py
tests/: test_country_code.py  test_country_name_filter.py
